new file:   images/Weather App logo.png 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="./images/Weather App logo.png" alt="weather-app-logo">
         <div class="search-div">
             <input type="text" name="search-bar" id="city-search-bar" placeholder="Search for a city">
             <button id="search-btn">Search</button>
